--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,17 +1,17 @@
-<header>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">CSV</a>
+<header style="background-color: black;">
+  <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="/" style="color: rgb(241, 241, 203);font-size: 20px; font-weight: 500;">CSV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-            </ul>
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/" style="color: rgb(244, 244, 195); font-size: 20px; font-weight: 500;">Home</a>
+                  </li>
+              </ul>
           </div>
-        </div>
-      </nav>
+      </div>
+  </nav>
 </header>
