--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/201/201614.png">
+ 
+    <link href="./style.css" rel="stylesheet">
     <%- style %>
 </head>
 <body>
