--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
 
   table {
       width: 100%;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       color: #040505;
   }
 
@@ -37,7 +37,7 @@
 
   .upload-btn{
    margin-left: 32%;
-   padding: 12px 80px;
+   padding: 11px 80px;
    background-color: #0040ff;
   font-weight: 600;
 
@@ -50,6 +50,7 @@
 
   .container {
       margin-top: 50px;
+      margin-bottom: 50px;
   }
 
   /* Add more styles as needed */
